--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyD2ubtmFOUZb77oZL5b7OBqsN0hkJs95sQ",
+    authDomain: "car-racing-e10a9.firebaseapp.com",
+    databaseURL: "https://car-racing-e10a9.firebaseio.com",
+    projectId: "car-racing-e10a9",
+    storageBucket: "car-racing-e10a9.appspot.com",
+    messagingSenderId: "1041751433389",
+    appId: "1:1041751433389:web:125f94e15393ed43ed6624",
+    measurementId: "G-JPZE4HMBGH"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 
 
-    <script>
-      //Your web app's Firebase configuration
-      
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
+    
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
